# fundamentals-of-dbt

./: .gitignore  Dockerfile  README.md  Taskfile.yml  devcontainer-docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
create-reports-with-evidence/: .gitignore  README.md
create-reports-with-evidence/pages/: index.md  issues.md  orders.md  pull_requests.md
create-reports-with-evidence/sources/duckdb_data_store/: connection.yaml  customers.sql  issues.sql  orders.sql  pull_requests.sql
extract-and-load-with-python/: README.md  el.py
transform-with-dbt/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
transform-with-dbt/models/staging/: __sources.yml
transform-with-dbt/models/staging/github_data/: _sources.yml  stg_events.sql
