[project]
name = "fundamentals-of-dbt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "dbt-duckdb>=1.9.1",
    "dbt-metricflow>=0.7.1",
    "duckdb>=1.1.3",
    "halo>=0.0.31",
    "isort>=5.13.2",
    "jafgen>=0.4.14",
    "requests>=2.32.3",
    "ruff>=0.8.4",
    "sqlfluff>=3.3.0",
    "sqlfluff-templater-dbt>=3.3.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "python-dotenv>=1.0.1",
]



